fixed mistakes wit gap and :nth-child

--- a/src/style.css
+++ b/src/style.css
@@ -1,27 +1,40 @@
 /* add styles here */
+
 body {
   margin: 2px;
-  margin-left: 1px;
 }
 
 .stars {
   display: flex;
-  gap: 4px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .stars:first-child {
   margin-top: 0;
 }
 
-.stars__star {
+.stars--0 .stars__star:nth-child(n - 1),
+.stars--1 .stars__star:nth-child(n - 2),
+.stars--2 .stars__star:nth-child(n - 3),
+.stars--3 .stars__star:nth-child(n - 4),
+.stars--4 .stars__star:nth-child(n - 5),
+.stars--5 .stars__star:nth-child(n - 6) {
   background-image: url(images/star.svg);
   background-repeat: no-repeat;
+
+  /* margin-right: 4px; */
 
   width: 16px;
   height: 16px;
 }
 
-.stars--N {
-  display: flex;
+.stars--1 .stars__star:nth-child(1),
+.stars--2 .stars__star:nth-child(-n + 2),
+.stars--3 .stars__star:nth-child(-n + 3),
+.stars--4 .stars__star:nth-child(-n + 4),
+.stars--5 .stars__star:nth-child(-n + 5) {
   background-image: url(images/star-active.svg);
+  width: 16px;
+  height: 16px;
 }
